[package]
name = "selvage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
vello = ["dep:vello"]
svg = ["dep:svg"]
pdf = ["dep:pdf-writer"]

[dependencies]
kurbo = { version = "0.11" , features = ["serde", "schemars"]}
schemars = "0.8.15"
serde = {"version" = "1.0.197", features=["derive", "rc"]}
svg = {"version" = "0.14.0", optional=true}
pdf-writer = {"version" = "0.9.2", optional=true}
vello = { "version" = "0.1", optional = true}
peniko = { "git" = "https://github.com/linebender/peniko.git", rev = "9f392fc", features = ["serde"]}

[patch.crates-io]
peniko = { "git" = "https://github.com/linebender/peniko.git", rev = "9f392fc", features = ["serde"]}
