[package]
name = "selvage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
vello = ["dep:vello"]
svg = ["dep:svg"]
pdf = ["dep:pdf-writer"]

[[example]]
name = "triangle"

[[example]]
name = "shapes"

[dependencies]
kurbo = { version = "0.11" , features = ["serde"]}
schemars = "0.8.15"
serde = {"version" = "1.0.197", features=["derive", "rc"]}
svg = {"version" = "0.14.0", optional=true}
pdf-writer = {"version" = "0.9.2", optional=true}
vello = { version = "0.3", optional = true }
peniko = { version = "0.2", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
wgpu = "22.1.0"
futures-intrusive = "0.5.0"
png = "0.17.10"
serde_json = "1.0.107"
serde = "1.0"
pollster = "0.3.0"
svg = "0.14.0"
pdf-writer = "0.9.2"
